--- a/site/index.html
+++ b/site/index.html
@@ -1,4 +1,5 @@
-<!DOCTYPE html><html lang="en"><head>
+<!DOCTYPE html>
+<html lang="en"><head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
     <meta name="description" content="All Demos - blockquote-web-components">
@@ -65,61 +66,61 @@
 <ol><li>
           <ul>
             <li><a href="ajax-provider/index.html">⇉ ajax-provider</a></li>
-            <li><a href="https://github.com/oscarmarina/blockquote-web-components/tree/main/packages/base/ajax-provider/README.md">↬ readme</a></li>
+            <li><a href="https://github.com/oscarmarina/lerna-netlify-test/tree/main/packages/base/ajax-provider/README.md">↬ readme</a></li>
           </ul>
         </li><li>
           <ul>
             <li><a href="blockquote-base-embedded-webview/index.html">⇉ blockquote-base-embedded-webview</a></li>
-            <li><a href="https://github.com/oscarmarina/blockquote-web-components/tree/main/packages/base/blockquote-base-embedded-webview/README.md">↬ readme</a></li>
+            <li><a href="https://github.com/oscarmarina/lerna-netlify-test/tree/main/packages/base/blockquote-base-embedded-webview/README.md">↬ readme</a></li>
           </ul>
         </li><li>
           <ul>
             <li><a href="blockquote-base-meta/index.html">⇉ blockquote-base-meta</a></li>
-            <li><a href="https://github.com/oscarmarina/blockquote-web-components/tree/main/packages/base/blockquote-base-meta/README.md">↬ readme</a></li>
+            <li><a href="https://github.com/oscarmarina/lerna-netlify-test/tree/main/packages/base/blockquote-base-meta/README.md">↬ readme</a></li>
           </ul>
         </li><li>
           <ul>
             <li><a href="blockquote-base-style-helpers/index.html">⇉ blockquote-base-style-helpers</a></li>
-            <li><a href="https://github.com/oscarmarina/blockquote-web-components/tree/main/packages/base/blockquote-base-style-helpers/README.md">↬ readme</a></li>
+            <li><a href="https://github.com/oscarmarina/lerna-netlify-test/tree/main/packages/base/blockquote-base-style-helpers/README.md">↬ readme</a></li>
           </ul>
         </li><li>
           <ul>
             <li><a href="blockquote-dialog/index.html">⇉ blockquote-dialog</a></li>
-            <li><a href="https://github.com/oscarmarina/blockquote-web-components/tree/main/packages/components/blockquote-dialog/README.md">↬ readme</a></li>
+            <li><a href="https://github.com/oscarmarina/lerna-netlify-test/tree/main/packages/components/blockquote-dialog/README.md">↬ readme</a></li>
           </ul>
         </li><li>
           <ul>
             <li><a href="blockquote-tabs/index.html">⇉ blockquote-tabs</a></li>
-            <li><a href="https://github.com/oscarmarina/blockquote-web-components/tree/main/packages/components/blockquote-tabs/README.md">↬ readme</a></li>
+            <li><a href="https://github.com/oscarmarina/lerna-netlify-test/tree/main/packages/components/blockquote-tabs/README.md">↬ readme</a></li>
           </ul>
         </li><li>
           <ul>
             <li><a href="blockquote-controller-context-meta/index.html">⇉ blockquote-controller-context-meta</a></li>
-            <li><a href="https://github.com/oscarmarina/blockquote-web-components/tree/main/packages/controllers/blockquote-controller-context-meta/README.md">↬ readme</a></li>
+            <li><a href="https://github.com/oscarmarina/lerna-netlify-test/tree/main/packages/controllers/blockquote-controller-context-meta/README.md">↬ readme</a></li>
           </ul>
         </li><li>
           <ul>
             <li><a href="blockquote-controller-rxjs/index.html">⇉ blockquote-controller-rxjs</a></li>
-            <li><a href="https://github.com/oscarmarina/blockquote-web-components/tree/main/packages/controllers/blockquote-controller-rxjs/README.md">↬ readme</a></li>
+            <li><a href="https://github.com/oscarmarina/lerna-netlify-test/tree/main/packages/controllers/blockquote-controller-rxjs/README.md">↬ readme</a></li>
           </ul>
         </li><li>
           <ul>
             <li><a href="blockquote-controller-xstate/index.html">⇉ blockquote-controller-xstate</a></li>
-            <li><a href="https://github.com/oscarmarina/blockquote-web-components/tree/main/packages/controllers/blockquote-controller-xstate/README.md">↬ readme</a></li>
+            <li><a href="https://github.com/oscarmarina/lerna-netlify-test/tree/main/packages/controllers/blockquote-controller-xstate/README.md">↬ readme</a></li>
           </ul>
         </li><li>
           <ul>
             <li><a href="blockquote-directive-ariaidref-slot/index.html">⇉ blockquote-directive-ariaidref-slot</a></li>
-            <li><a href="https://github.com/oscarmarina/blockquote-web-components/tree/main/packages/directives/blockquote-directive-ariaidref-slot/README.md">↬ readme</a></li>
+            <li><a href="https://github.com/oscarmarina/lerna-netlify-test/tree/main/packages/directives/blockquote-directive-ariaidref-slot/README.md">↬ readme</a></li>
           </ul>
         </li><li>
           <ul>
             <li><a href="blockquote-directive-svg-to-data-image/index.html">⇉ blockquote-directive-svg-to-data-image</a></li>
-            <li><a href="https://github.com/oscarmarina/blockquote-web-components/tree/main/packages/directives/blockquote-directive-svg-to-data-image/README.md">↬ readme</a></li>
+            <li><a href="https://github.com/oscarmarina/lerna-netlify-test/tree/main/packages/directives/blockquote-directive-svg-to-data-image/README.md">↬ readme</a></li>
           </ul>
         </li><li>
           <ul>
             <li><a href="blockquote-mixin-slot-content/index.html">⇉ blockquote-mixin-slot-content</a></li>
-            <li><a href="https://github.com/oscarmarina/blockquote-web-components/tree/main/packages/mixins/blockquote-mixin-slot-content/README.md">↬ readme</a></li>
+            <li><a href="https://github.com/oscarmarina/lerna-netlify-test/tree/main/packages/mixins/blockquote-mixin-slot-content/README.md">↬ readme</a></li>
           </ul>
         </li></ol></body></html>
